# UI_Project

./: CMakeLists.txt  README.md  compile_commands.json  editor_config.h  editor_config.h.in  helloworld.cpp  main.cpp
.cache/clangd/index/: editor_config.h.440290367E774D07.idx  glad.c.8F738B9C5D754C68.idx  glad.h.90F02AD3AFC729A3.idx  glfw3.h.2B3ACCC971E9A88C.idx  khrplatform.h.65B9CC8D21CE426F.idx  main.cpp.73871394D1461081.idx
libs/GLAD/: glad.c
libs/GLAD/glad/: glad.h
libs/GLFW/: glfw3.lib
libs/GLFW_3.3.8/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
libs/GLFW_3.3.8/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters  boing.vcxproj  boing.vcxproj.filters  cmake_install.cmake  gears.vcxproj  gears.vcxproj.filters  heightmap.vcxproj  heightmap.vcxproj.filters  offscreen.vcxproj  offscreen.vcxproj.filters  particles.vcxproj  particles.vcxproj.filters  sharing.vcxproj  sharing.vcxproj.filters  simple.vcxproj  simple.vcxproj.filters  splitview.vcxproj  splitview.vcxproj.filters  wave.vcxproj  wave.vcxproj.filters
libs/GLFW_3.3.8/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  update_mappings.vcxproj  update_mappings.vcxproj.filters
libs/GLFW_3.3.8/tests/: INSTALL.vcxproj  INSTALL.vcxproj.filters  clipboard.vcxproj  cursor.vcxproj  (+39 more)
shaders/: example.frag  shader_core.cpp  shader_core.h
ui/: core.h
(+278 files in other folders)
